--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ img {
   margin-right: 50px;
 }
 
+.icon-link {
+  margin-right: 10px;
+}
+
 .adr-nav .adr-link {
   display: block;
   padding: 32px 0;
@@ -121,6 +125,8 @@ img {
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  width: 161px;
 }
 
 .adr-link:hover,
@@ -159,7 +165,15 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+
+  background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('/img/Img_hero.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 1600px;
 }
+
 .hero-title {
   color: var(--white-color);
   font-weight: 900;
@@ -471,6 +485,32 @@ img {
 
 .portfolio-content .title {
   margin-bottom: 0px;
+}
+
+/* icon */
+.icon-inner {
+  width: 270px;
+  height: 120px;
+  background-color: var(--secondary-bg-color);
+  border-radius: 4px;
+  padding: 25px 100px;
+}
+
+.icon-element {
+  width: 70px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.icon-envelope {
+  width: 16px;
+  height: 12px;
+}
+
+.icon-telefon {
+  width: 10px;
+  height: 16px;
 }
 /* footer */
 footer {
