--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ img {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  max-width: 1600px;
+  /* max-width: 1600px; */
 }
 
 .hero-title {
