--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,8 @@ img {
 
 .icon-link {
   margin-right: 10px;
+  width: 16px;
+  height: 16px;
 }
 
 .adr-nav .adr-link {
@@ -488,6 +490,10 @@ img {
 }
 
 /* icon */
+.icon {
+  fill: #afb1b8;
+}
+
 .icon-inner {
   width: 270px;
   height: 120px;
@@ -555,6 +561,7 @@ img {
 .constant-client:hover,
 .constant-client:focus {
   background-color: var(--color-accent);
+  fill: var(--color-accent);
 }
 
 .social {
@@ -570,28 +577,38 @@ img {
   width: 44px;
   height: 44px;
   margin-right: 10px;
-  /* padding: 0px; */
+}
+
+.network:last-child {
+  margin-right: 0px;
 }
 
 .social-link {
   display: inline-block;
-
+  width: 44px;
+  height: 44px;
+  padding: 12px;
   border-radius: 50%;
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--color-accent);
+  fill: var(--white-color);
 }
 
 .social-page {
-  width: 44px;
-  height: 44px;
+  width: 20px;
+  height: 20px;
+}
+
+.social-page:hover,
+.social-page:focus {
+  fill: var(--white-color);
 }
 
 .icon-network {
-  width: 20px;
-  height: 20px;
+  align-items: center;
 }
 
 /* footer */
