--- a/css/styles.css
+++ b/css/styles.css
@@ -113,9 +113,16 @@ img {
 }
 
 .icon-link {
+  position: relative;
+  top: 3px;
   margin-right: 10px;
   width: 16px;
   height: 16px;
+}
+
+.icon-link:hover,
+.icon-link:focus {
+  fill: var(--color-accent);
 }
 
 .adr-nav .adr-link {
@@ -127,8 +134,6 @@ img {
   line-height: 16px;
   letter-spacing: 0.02em;
   text-decoration: none;
-
-  width: 161px;
 }
 
 .adr-link:hover,
@@ -157,6 +162,8 @@ img {
   display: block;
   margin-bottom: 20px;
   margin-right: 0;
+
+  width: 145px;
 }
 
 /* herro */
@@ -619,6 +626,10 @@ footer {
   padding-bottom: 60px;
 }
 
+.footer-contact {
+  width: 231px;
+}
+
 .wrapper-item {
   margin-top: 9px;
 }
@@ -626,3 +637,36 @@ footer {
 .wrapper-item:first-child {
   margin-top: 0px;
 }
+
+.footer-welcome {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+
+  margin-top: 0px;
+}
+
+.welcome {
+  width: 206px;
+  margin-left: 70px;
+  margin-top: 72px;
+}
+
+.footer-network {
+  display: flex;
+  margin-top: 20px;
+}
+
+.social-link.footer {
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-link.footer:hover,
+.social-link.footer:focus {
+  background-color: var(--color-accent);
+  fill: var(--white-color);
