--- a/css/styles.css
+++ b/css/styles.css
@@ -653,7 +653,8 @@ footer {
 .welcome {
   width: 206px;
   margin-left: 70px;
-  margin-top: 72px;
+  margin-top: 12px;
+  margin-right: auto;
 }
 
 .footer-network {
@@ -670,3 +671,13 @@ footer {
 .social-link.footer:focus {
   background-color: var(--color-accent);
   fill: var(--white-color);
+}
+
+.footer-adr {
+  display: block;
+  width: 231px;
+}
+
+.footer-info {
+  display: flex;
+}
