--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ img {
   text-align: center;
 
   background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('/img/Img_hero.jpg');
+    url('../img/Img_hero.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
