--- a/css/styles.css
+++ b/css/styles.css
@@ -120,10 +120,10 @@ img {
   height: 16px;
 }
 
-.icon-link:hover,
+/* .icon-link:hover,
 .icon-link:focus {
   fill: var(--color-accent);
-}
+} */
 
 .adr-nav .adr-link {
   display: block;
@@ -139,6 +139,7 @@ img {
 .adr-link:hover,
 .adr-link:focus {
   color: var(--color-accent);
+  fill: var(--color-accent);
 }
 
 /* logo */
@@ -459,6 +460,11 @@ img {
 
 .button-list:last-child {
   margin-right: 0px;
+}
+
+.button-list:hover,
+.button-list:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-card .list {
