--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ img {
   color: var(--white-color);
   background-color: var(--color-accent);
   font-family: inherit;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
   cursor: pointer;
@@ -572,11 +572,12 @@ img {
 }
 
 .client-link {
-  display: inline-block;
+  display: flex;
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
-
+  /* padding: 16px 32px; */
+  align-items: center;
+  justify-content: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
@@ -584,6 +585,7 @@ img {
 .client-link:hover,
 .client-link:focus {
   border: 1px solid var(--color-accent);
+  
 }
 
 .icon-client {
@@ -595,9 +597,9 @@ img {
 
 .constant-client:hover,
 .constant-client:focus {
-  background-color: var(--color-accent);
+  /* background-color: var(--color-accent); */
   fill: var(--color-accent);
-}
+} 
 
 .social {
   display: flex;
@@ -630,7 +632,7 @@ img {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--color-accent);
-  fill: var(--white-color);
+  fill: var(--white-color); 
 }
 
 .social-page {
@@ -640,8 +642,9 @@ img {
 
 .social-page:hover,
 .social-page:focus {
+  background-color: var(--color-accent);
   fill: var(--white-color);
-} 
+}  
 
 .icon-network {
   align-items: center;
@@ -682,8 +685,9 @@ footer {
 .welcome {
   width: 206px;
   margin-left: 70px;
-  margin-top: 12px;
-  margin-right: auto;
+  /* margin-top: 12px;
+  margin-right: auto;  */
+  
 }
 
 .footer-network {
@@ -692,14 +696,15 @@ footer {
 }
 
 .social-link.footer {
-  display: inline-block;
+  display: flex;
   background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--white-color);
 }
 
 .social-link.footer:hover,
 .social-link.footer:focus {
   background-color: var(--color-accent);
-  fill: var(--white-color);
+  
 }
 
 .footer-adr {
@@ -709,4 +714,5 @@ footer {
 
 .footer-info {
   display: flex;
+  align-items: baseline;
 }
